Removed vertical-line class from html, then added line-height to Experience in css

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="Education-Block-Two-Left">
                     <p>Feb. 2019 - Dec. 2022</p>
                     <p>CPUT</p>
-                    <p style="display: inline-block;">Mechanical Engineering <div class="vertical-line"></div></p>
+                    <p style="display: inline-block;">Mechanical Engineering |</p>
                     <p>Full-time</p>
                 </div>
                 <ul class="Education-Block-Two-Rght">
@@ -108,7 +108,7 @@
                 <div class="Education-Block-Three-Left">
                     <p>Jan. 2014 - Dec. 2018</p>
                     <p>Hudson Park High</p>
-                    <p style="display: inline-block;">Matric <div class="vertical-line"></div> NQF Level 4</p>
+                    <p style="display: inline-block;">Matric | NQF Level 4</p>
                 </div>
                 <ul class="Education-Block-Three-Rght">
                     <li>Built core academic skills and developed an early passion for problem-solving</li>
@@ -178,7 +178,7 @@
             <div class="Experience-Block-One-Left">
                 <p>Aug. 2024 - July.2025</p>
                 <p>Bookstore Clerk</p>
-                <p style="display: inline-block;">Reader's Haven <div class="vertical-line"></div> Full-time</p>
+                <p style="display: inline-block;">Reader's Haven | Full-time</p>
             </div>
             <ul class="Experience-Block-One-Right">
                 <li>Organized and shelved new arrivals, ensuring a clean and enticing store layout <button style="background-color: #D76239; color: white; border: #D76239; border-radius: 8px;">Most Recent</button></li>
@@ -189,8 +189,8 @@
         <div class="Experience-Block-Two">
             <div class="Experience-Block-Two-Left">
                 <p>Jan. 2023 - July. 2024</p>
-                <p style="display: inline-block;">Sales <div class="vertical-line-two"></div> Cell Contracts</p>
-                <p style="display: inline-block;">Tech Solutions <div class="vertical-line"></div> Full-time</p>
+                <p style="display: inline-block;">Sales | Cell Contracts</p>
+                <p style="display: inline-block;">Tech Solutions | Full-time</p>
             </div>
             <ul class="Experience-Block-Two-Right">
                 <li>Advised customers on the best mobile plans and devices, driving consistent contract sign-ups</li>
@@ -202,7 +202,7 @@
             <div class="Experience-Block-Three-Left">
                 <p>Feb. 2021 - Dec. 2022</p>
                 <p>Waiter</p>
-                <p style="display: inline-block;">The Bistro House <div class="vertical-line"></div> Part-time</p>
+                <p style="display: inline-block;">The Bistro House | Part-time</p>
             </div>
             <ul class="Experience-Block-Three-Right">
                 <li>Delivered attentive table service, promptly addressing guests' needs and requests</li>
@@ -214,9 +214,9 @@
     <footer>
         <h2 class="message">Let's chat! I'm ready to work on exciting projects.</h2>
         <div class="Contact">
-            <p style="display: inline-block;"><a href="mailto:melisamadula.mm@gmail.com" style="text-decoration: none; color: #bbb;">melisamadula.mm@gmail.com</a><div class="vertical-line"></div>
-            <p style="display: inline-block;">0665496967 <div class="vertical-line"></div></p>
-            <p style="display: inline-block;">LinkedIn Link <div class="vertical-line"></div></p>
+            <p style="display: inline-block;"><a href="mailto:melisamadula.mm@gmail.com" style="text-decoration: none; color: #bbb;">melisamadula.mm@gmail.com |</a></p>
+            <p style="display: inline-block;">0665496967 |</p>
+            <p style="display: inline-block;">LinkedIn Link |</p>
             <p style="display: inline-block;"><a href="https://github.com/melisamadula" style="text-decoration: none; color: #bbb;">GitHub Link</a></p>
         </div>
     </footer>
