Corrected Projects Section in html and css, then media queried it

--- a/index.html
+++ b/index.html
@@ -45,34 +45,38 @@
     <div class="Projects">
         <h2 class="P">Projects</h2>
         <div class="projected">
-            <article class="Portfolio">
-                <h3>2025</h3>
-                <h3>Portfolio Website</h3>
-                <p><strong>Brief:</strong>Developed a personal portfolio website to showcase projects and skills.</p>
-                <p><strong>Technologies:</strong>React, JavaScript, HTML, CSS</p>
-                <p><strong>Responsibilities:</strong>Designed and implemented the website, ensured responsiveness and accessibility.</p>
-            </article>
-            <article class="Podcast">
-                <h3>2025</h3>
-                <h3>Podcast App</h3>
-                <p><strong>Brief:</strong>Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.</p>
-                <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
-                <p><strong>Responsibilities:</strong>Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.</p>
-            </article>
-            <article class="Agile">
-                <h3>2025</h3>
-                <h3>Agile Board</h3>
-                <p><strong>Brief:</strong>Created a task management tool for organizing and tracking tasks..</p>
-                <p><strong>Technologies:</strong>JavaScript, HTML, CSS</p>
-                <p><strong>Responsibilities:</strong>Developed real-time data synchronization, user interface, and user authentication. Implemented data persistence in localStorage.</p>
-            </article>
-            <article class="Super">
-                <h3>2026</h3>
-                <h3>Super Cool Project</h3>
-                <p><strong>Brief:</strong>Developed a incredible application that allows users to do amazing things.</p>
-                <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
-                <p><strong>Responsibilities:</strong>Implemented complex functions, a user-friendly user interface, and responsive design. Built our additional features specific to the client's needs.</p>
-            </article>
+            <section class="section-three">
+                <article class="Portfolio">
+                    <h3>2025</h3>
+                    <h3>Portfolio Website</h3>
+                    <p><strong>Brief:</strong>Developed a personal portfolio website to showcase projects and skills.</p>
+                    <p><strong>Technologies:</strong>React, JavaScript, HTML, CSS</p>
+                    <p><strong>Responsibilities:</strong>Designed and implemented the website, ensured responsiveness and accessibility.</p>
+                </article>
+                <article class="Podcast">
+                    <h3>2025</h3>
+                    <h3>Podcast App</h3>
+                    <p><strong>Brief:</strong>Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.</p>
+                    <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
+                    <p><strong>Responsibilities:</strong>Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.</p>
+                </article>
+            </section>
+            <section class="section-four">
+                <article class="Agile">
+                    <h3>2025</h3>
+                    <h3>Agile Board</h3>
+                    <p><strong>Brief:</strong>Created a task management tool for organizing and tracking tasks..</p>
+                    <p><strong>Technologies:</strong>JavaScript, HTML, CSS</p>
+                    <p><strong>Responsibilities:</strong>Developed real-time data synchronization, user interface, and user authentication. Implemented data persistence in localStorage.</p>
+                </article>
+                <article class="Super">
+                    <h3>2026</h3>
+                    <h3>Super Cool Project</h3>
+                    <p><strong>Brief:</strong>Developed a incredible application that allows users to do amazing things.</p>
+                    <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
+                    <p><strong>Responsibilities:</strong>Implemented complex functions, a user-friendly user interface, and responsive design. Built our additional features specific to the client's needs.</p>
+                </article>
+            </section>
         </div>
     </div>
     <section class="section-two">
