Changed Tools Section a bit

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
 
         <!--Redo of Tools-->
         <div class="Tools">
-            <h2 class="Tlogo.png" alt="CSS icon">
+            <h4>languages</h4>
+            <nav class="tools-box">
+                <img src="Tlogo.png" alt="CSS icon" class="tool-img">
                 <img src="html-logo.png" alt="HTML icon" class="tool-img">
                 <img src="react-logo.png" alt="React icon" class="tool-img">
                 <img src="js-logo.png" alt="JavaScript icon" class="tool-img">
